--- a/TQPGSS_HFT_2023241.JSClient/wwwroot/team.html
+++ b/TQPGSS_HFT_2023241.JSClient/wwwroot/team.html
@@ -2,9 +2,46 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Team oldal</title>
+    <link href="Style.css" rel="stylesheet" />
 </head>
 <body>
+    <h1>Team Cataloge</h1>
 
+    <div id="formdiv">
+        <label>Team name</label>
+        <input type="text" id="teamName" />
+        <label>Team points</label>
+        <input type="text" id="teamPoints" />
+        <label>Team principal</label>
+        <input type="text" id="teamPrincipal" />
+        <button onclick="create()" type="button">Add Team</button>
+    </div>
+
+    <div id="updateformdiv">
+        <label>Team name</label>
+        <input type="text" id="teamNametoupdate" />
+        <label>Team points</label>
+        <input type="text" id="teamPointstoupdate" />
+        <label>Team principal</label>
+        <input type="text" id="teamPrincipaltoupdate" />
+        <button onclick="update()" type="button">Update Team</button>
+    </div>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Principal</th>
+                <th>Points</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody id="teamResultArea">
+        </tbody>
+    </table>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/6.0.1/signalr.js"></script>
+    <script src="scriptTeam.js"></script>
 </body>
 </html>
