--- a/TQPGSS_HFT_2023241.JSClient/wwwroot/driver.html
+++ b/TQPGSS_HFT_2023241.JSClient/wwwroot/driver.html
@@ -16,6 +16,20 @@
         <button onclick="create()" type="button">Add Driver</button>
     </div>
 
+    <div id="nonCrud">
+        <label>Most wins:</label>
+        <button onclick="getResultMostWins()" type="button">Most Wins</button>
+        <label>Driver's wins:</label>
+        <input type="text" id="driverName" />
+        <button onclick="getResultDriverWins()" type="button">Driver Wins</button>
+        <label>Avarage points:</label>
+        <button onclick="getResultAvaragePoints()" type="button">Avarage Points</button>
+        <button id="removeButton" onclick="removeNonCrudResult()" type="button">Remove</button>
+    </div>
+
+    <div id="resultId">
+    </div>
+
     <div id="updateformdiv">
         <label>Driver name</label>
         <input type="text" id="driverNametoupdate" />
