--- a/TQPGSS_HFT_2023241.JSClient/wwwroot/grandprix.html
+++ b/TQPGSS_HFT_2023241.JSClient/wwwroot/grandprix.html
@@ -17,6 +17,19 @@
         <button onclick="create()" type="button">Add Driver</button>
     </div>
 
+    <div id="nonCrud">
+        <label>Grand Prix winner:</label>
+        <input type="text" id="grandprixrNameWinner" />
+        <button onclick="getResultWinner()" type="button">Grand Prix Winner</button>
+        <label>Grand Prix details:</label>
+        <input type="text" id="grandprixrNameDetails" />
+        <button onclick="getResultDetails()" type="button">Grand Prix Details:</button>
+        <button id="removeButton" onclick="removeNonCrudResult()" type="button">Remove</button>
+    </div>
+
+    <div id="resultId">
+    </div>
+
     <div id="updateformdiv">
         <label>Grand Prix name</label>
         <input type="text" id="grandPrixNametoupdate" />
